2003-05-22  Bruno Haible  <bruno@clisp.org>

	Preliminary support for x86_64 CPU.
	* lispbibl.d (AMD64): New macro.
	* spvw_page.d: Treat AMD64 like IA64.

2003-05-22  Sam Steingold  <sds@gnu.org>

	* loadform.lisp (make-load-form): do not define a method
	specialized to STANDARD-OBJECT - ANS requires an error there

2003-05-21  Sam Steingold  <sds@gnu.org>

	* clos.lisp (no-method-caller): new function
	(compute-dispatch): use it instead of calling NO-APPLICABLE-METHOD
	directly to avoid funcalling the return value of NO-APPLICABLE-METHOD
	(compute-effective-method): ditto for NO-APPLICABLE-METHOD and
	NO-PRIMARY-METHOD; removed the loop

2003-05-21  Sam Steingold  <sds@gnu.org>

	* error.d (check_fdefinition): fixed stack handling
	(check_function): get(sym,ind) may not be a symbol
	* eval.d (eval1): do not use apply() after check_fdefinition()

2003-05-21  Sam Steingold  <sds@gnu.org>

	* disassem.lisp (disassemble, disassemble-machine-code): return
	NIL, as per ANSI CL spec

2003-05-21  Sam Steingold  <sds@gnu.org>

	MAKE-INSTANCES-OBSOLETE now does nothing except for issuing a
	warning: there is no point in obsoleting instances if the class
	has not been redefined
	* clos.lisp (ensure-class): incf CLASS-ID here
	(make-instances-obsolete): do not incf CLASS-ID here

2003-05-20  Sam Steingold  <sds@gnu.org>

	even more errors are now recoverable
	* control.d (FUNCTION): use check_funname() and
	check_fdefinition() instead of signalling errors
	(fehler_undef_function): removed
	(SYMBOL-FUNCTION, FDEFINITION): use check_fdefinition()
	instead of fehler_undef_function()
	(check_setq_body): GC-unsafe due to using
	check_symbol_non_constant() instead of test_symbol_non_constant()
	(SET, MAKUNBOUND, MULTIPLE-VALUE-SETQ): use
	check_symbol_non_constant() instead of test_symbol_non_constant()
	(check_varspec): new function
	(make_variable_frame, COMPILER-LET): use it, also use
	check_symbol_non_constant() instead of test_symbol_non_constant()