@@ -102,11 +102,33 @@ local void stackoverflow_handler (int emergency, stackoverflow_context_t scp) {
     if (scp) { setSTACK(STACK = (gcv_object_t*)(scp->sc_regs[9])); }
    #endif
   #endif
+  #ifdef UNIX_HPUX
+   #ifdef HPPA
+    # stackoverflow_context_t is actually `struct sigcontext *'.
+    #define USE_64BIT_REGS(mc) \
+      (((mc).ss_flags & SS_WIDEREGS) && ((mc).ss_flags & SS_NARROWISINVALID))
+    #define GET_R10(mc) \
+      (USE_64BIT_REGS(mc) ? (mc).ss_wide.ss_64.ss_gr10 : (mc).ss_narrow.ss_gr10)
+    if (scp) { setSTACK(STACK = (gcv_object_t*)GET_R10(scp->sc_ctxt.sl.sl_ss); }
+   #endif
+  #endif
   #ifdef UNIX_FREEBSD
     # stackoverflow_context_t is actually `struct sigcontext *'.
    #ifdef I80386
     if (scp) { setSTACK(STACK = (gcv_object_t*)(scp->sc_ebx)); }
    #endif
+   #ifdef DECALPHA
+    if (scp) { setSTACK(STACK = (gcv_object_t*)(scp->sc_regs[9])); }
+   #endif
+  #endif
+  #ifdef UNIX_OPENBSD
+    # stackoverflow_context_t is actually `struct sigcontext *'.
+   #ifdef I80386
+    if (scp) { setSTACK(STACK = (gcv_object_t*)(scp->sc_ebx)); }
+   #endif
+  #endif
+  #ifdef UNIX_NETBSD
+    # stackoverflow_context_t is actually `struct sigcontext *'.
    #ifdef DECALPHA
     if (scp) { setSTACK(STACK = (gcv_object_t*)(scp->sc_regs[9])); }
    #endif
