@@ -1,5 +1,10 @@
 2003-05-22  Bruno Haible  <bruno@clisp.org>
 
+	* spvw_sigsegv.d (stackoverflow_handler): Add support for restoring
+	STACK on hppa-hpux, alpha-freebsd, i386-openbsd, alpha-netbsd.
+
+2003-05-22  Bruno Haible  <bruno@clisp.org>
+
 	Preliminary support for x86_64 CPU.
 	* lispbibl.d (AMD64): New macro.
 	* spvw_page.d: Treat AMD64 like IA64.
